--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         }
         /* Narrower columns for Letter and SEP averages */
         .narrow-column {
-            width: 30px; /* Reduced from 50px to 30px */
+            width: 30px; /* Adjusted to be narrower */
         }
         /* Wider column for Student names */
         #gradeTable th:first-child, #gradeTable td:first-child {
@@ -160,9 +160,421 @@
     <script src="https://cdn.jsdelivr.net/npm/html2canvas"></script>
 
     <script>
-        // (JavaScript code remains unchanged from the previous version)
-        // The only change is in the CSS for .narrow-column class
-        // Rest of the code is the same as before
+        // Initialize variables
+        const gradeTable = document.getElementById('gradeTable');
+        const proficiencyRow = document.getElementById('proficiencyRow');
+        const skillRow = document.getElementById('skillRow');
+        const assessmentRow = document.getElementById('assessmentRow');
+        const tableBody = gradeTable.querySelector('tbody');
+        const chartContainer = document.getElementById('chartContainer');
+        let skills = [];
+        const seps = ['SEP2', 'SEP4', 'SEP6'];
+
+        // Function to initialize the table with 10 skills/assessments
+        function initializeSkills() {
+            for (let i = 0; i < 10; i++) {
+                addSkill('Assessment ' + (i + 1));
+            }
+        }
+
+        // Function to initialize the table with 10 students
+        function initializeStudents() {
+            for (let i = 1; i <= 10; i++) {
+                addStudent('Student ' + i);
+            }
+        }
+
+        // Function to add a new skill/assessment column
+        document.getElementById('addSkillBtn').addEventListener('click', function() {
+            addSkill('Assessment');
+        });
+
+        // Function to add a new student
+        document.getElementById('addStudentBtn').addEventListener('click', function() {
+            const studentNumber = tableBody.querySelectorAll('tr').length + 1;
+            addStudent('Student ' + studentNumber);
+        });
+
+        // Function to add a student
+        function addStudent(studentName) {
+            const row = document.createElement('tr');
+
+            const studentCell = document.createElement('td');
+            studentCell.contentEditable = true;
+            studentCell.textContent = studentName;
+            row.appendChild(studentCell);
+
+            const letterGradeCell = document.createElement('td');
+            letterGradeCell.className = 'letter-grade narrow-column';
+            letterGradeCell.textContent = 'N/A';
+            row.appendChild(letterGradeCell);
+
+            // Add SEP average cells
+            seps.forEach(sep => {
+                const sepCell = document.createElement('td');
+                sepCell.className = 'sep-average-cell narrow-column';
+                sepCell.dataset.sep = sep;
+                sepCell.textContent = 'N/A';
+                row.appendChild(sepCell);
+            });
+
+            // Add score cells for existing skills
+            for (let j = 0; j < skills.length; j++) {
+                const scoreCell = createScoreCell(j);
+                row.appendChild(scoreCell);
+            }
+
+            tableBody.appendChild(row);
+        }
+
+        // Function to add a skill
+        function addSkill(assessmentName) {
+            const skillIndex = skills.length;
+            skills.push({ skillName: '', assessmentName, sep: 'SEP2' });
+
+            // Add proficiency percentage cell
+            const proficiencyCell = document.createElement('th');
+            proficiencyCell.textContent = '0%';
+            proficiencyCell.dataset.skillIndex = skillIndex;
+            proficiencyRow.appendChild(proficiencyCell);
+
+            // Add skill dropdown in the skill row
+            const skillHeader = document.createElement('th');
+            const skillSelect = document.createElement('select');
+            skillSelect.className = 'skill-select';
+            skillSelect.dataset.skillIndex = skillIndex;
+            seps.forEach(sep => {
+                const option = document.createElement('option');
+                option.value = sep;
+                option.textContent = sep;
+                skillSelect.appendChild(option);
+            });
+            skillHeader.appendChild(skillSelect);
+            skillRow.appendChild(skillHeader);
+
+            // Event listener to update skill SEP
+            skillSelect.addEventListener('change', function() {
+                skills[skillIndex].sep = skillSelect.value;
+                calculateSEPAverages();
+                calculateLetterGrades();
+            });
+
+            // Add assessment name cell
+            const assessmentHeader = document.createElement('th');
+            assessmentHeader.contentEditable = true;
+            assessmentHeader.textContent = assessmentName;
+            assessmentHeader.dataset.skillIndex = skillIndex;
+            assessmentRow.appendChild(assessmentHeader);
+
+            // Add event listener to update assessment name
+            assessmentHeader.addEventListener('blur', function() {
+                skills[skillIndex].assessmentName = assessmentHeader.textContent;
+            });
+
+            // Add score cells to each student row
+            const studentRows = tableBody.querySelectorAll('tr');
+            studentRows.forEach(row => {
+                const scoreCell = createScoreCell(skillIndex);
+                row.appendChild(scoreCell);
+            });
+
+            // Create chart
+            createChart(skillIndex);
+
+            // Update charts and proficiency percentages
+            updateCharts();
+            updateProficiencyPercentages();
+        }
+
+        // Function to create score cell
+        function createScoreCell(skillIndex) {
+            const scoreCell = document.createElement('td');
+
+            const select = document.createElement('select');
+            select.className = 'score-select score-default';
+            select.dataset.skillIndex = skillIndex;
+            const scores = ['', 4, 3, 2, 1, 'N']; // Include blank option and 'N'
+            scores.forEach(score => {
+                const option = document.createElement('option');
+                option.value = score;
+                option.text = score;
+                select.appendChild(option);
+            });
+
+            // Event listener to update cell color, charts, and proficiency percentages
+            select.addEventListener('change', function() {
+                updateCellColor(select);
+                updateCharts();
+                updateProficiencyPercentages();
+                calculateSEPAverages();
+                calculateLetterGrades();
+            });
+
+            scoreCell.appendChild(select);
+
+            // Initialize cell color
+            updateCellColor(select);
+
+            return scoreCell;
+        }
+
+        // Function to update cell background color based on score
+        function updateCellColor(selectElement) {
+            const score = selectElement.value;
+            selectElement.className = 'score-select';
+            if (score === '') {
+                selectElement.classList.add('score-default');
+            } else {
+                selectElement.classList.add('score-' + score);
+            }
+        }
+
+        // Function to create chart
+        const charts = [];
+
+        function createChart(skillIndex) {
+            const canvas = document.createElement('canvas');
+            canvas.id = 'pieChart-' + skillIndex;
+            const chartWrapper = document.createElement('div');
+            chartWrapper.className = 'chart-wrapper';
+            chartWrapper.id = 'chartWrapper-' + skillIndex;
+            chartWrapper.appendChild(canvas);
+            chartContainer.appendChild(chartWrapper);
+
+            const ctx = canvas.getContext('2d');
+            const chart = new Chart(ctx, {
+                type: 'doughnut',
+                data: {
+                    labels: ['4', '3', '2', '1', 'N'],
+                    datasets: [{
+                        data: [0, 0, 0, 0, 0],
+                        backgroundColor: ['#00c5ff', '#00ff04', '#fdff00', '#ff1837', '#ff00a7'],
+                    }]
+                },
+                options: {
+                    plugins: [ChartDataLabels],
+                    responsive: false,
+                    maintainAspectRatio: false,
+                    plugins: {
+                        legend: {
+                            display: true,
+                            position: 'top',
+                        },
+                        tooltip: {
+                            enabled: true,
+                            callbacks: {
+                                label: function(context) {
+                                    const label = context.label || '';
+                                    const value = context.raw;
+                                    return label + ': ' + value + '%';
+                                }
+                            }
+                        },
+                        datalabels: {
+                            formatter: function(value, context) {
+                                return value > 0 ? value + '%' : '';
+                            },
+                            color: '#fff',
+                            font: {
+                                weight: 'bold'
+                            }
+                        }
+                    }
+                }
+            });
+            charts.push(chart);
+
+            // Adjust chart position
+            adjustChartPositions();
+        }
+
+        // Function to adjust chart positions
+        function adjustChartPositions() {
+            const tableRect = gradeTable.getBoundingClientRect();
+            const headers = skillRow.querySelectorAll('th');
+            headers.forEach((header, index) => {
+                if (index <= 4) return; // Skip the first 5 columns (Student, Letter, SEP2 Avg, SEP4 Avg, SEP6 Avg)
+                const rect = header.getBoundingClientRect();
+                const left = rect.left - tableRect.left;
+                const width = rect.width;
+                const chartWrapper = document.getElementById('chartWrapper-' + (index - 5));
+                chartWrapper.style.left = left + 'px';
+                chartWrapper.style.width = width + 'px';
+            });
+        }
+
+        // Function to update all charts
+        function updateCharts() {
+            for (let skillIndex = 0; skillIndex < skills.length; skillIndex++) {
+                updateChart(skillIndex);
+            }
+        }
+
+        // Function to update a single chart
+        function updateChart(skillIndex) {
+            const scoreCounts = {'4': 0, '3': 0, '2': 0, '1': 0, 'N': 0};
+            let total = 0;
+            const selects = document.querySelectorAll('.score-select[data-skill-index="' + skillIndex + '"]');
+            selects.forEach(select => {
+                const score = select.value;
+                if (score !== '') {
+                    scoreCounts[score]++;
+                    total++;
+                }
+            });
+
+            // Avoid division by zero
+            const percentages = total > 0 ? [
+                ((scoreCounts['4'] / total) * 100).toFixed(2),
+                ((scoreCounts['3'] / total) * 100).toFixed(2),
+                ((scoreCounts['2'] / total) * 100).toFixed(2),
+                ((scoreCounts['1'] / total) * 100).toFixed(2),
+                ((scoreCounts['N'] / total) * 100).toFixed(2)
+            ] : [0, 0, 0, 0, 0];
+
+            const chart = charts[skillIndex];
+            chart.data.datasets[0].data = percentages;
+            chart.update();
+        }
+
+        // Function to update proficiency percentages
+        function updateProficiencyPercentages() {
+            const proficiencyCells = proficiencyRow.querySelectorAll('th');
+            proficiencyCells.forEach((cell, index) => {
+                if (index <= 4) return; // Skip the first 5 cells
+                const skillIndex = index - 5;
+                const selects = document.querySelectorAll('.score-select[data-skill-index="' + skillIndex + '"]');
+                let total = 0;
+                let proficientCount = 0;
+                selects.forEach(select => {
+                    const score = select.value;
+                    if (score !== '') {
+                        total++;
+                        if (score === '3' || score === '4') {
+                            proficientCount++;
+                        }
+                    }
+                });
+                const proficiencyPercentage = total > 0 ? ((proficientCount / total) * 100).toFixed(2) + '%' : '0%';
+                cell.textContent = proficiencyPercentage;
+            });
+        }
+
+        // Function to calculate SEP averages and update SEP average cells
+        function calculateSEPAverages() {
+            const studentRows = tableBody.querySelectorAll('tr');
+            studentRows.forEach(row => {
+                const sepSums = {'SEP2': 0, 'SEP4': 0, 'SEP6': 0};
+                const sepCounts = {'SEP2': 0, 'SEP4': 0, 'SEP6': 0};
+
+                // Get all score selects in the row
+                const selects = row.querySelectorAll('.score-select');
+                selects.forEach(select => {
+                    const skillIndex = select.dataset.skillIndex;
+                    const sep = skills[skillIndex].sep;
+                    const score = select.value;
+                    if (score !== '' && score !== 'N') {
+                        sepSums[sep] += parseFloat(score);
+                        sepCounts[sep]++;
+                    }
+                });
+
+                // Update SEP average cells
+                seps.forEach((sep, index) => {
+                    const avgCell = row.children[2 + index];
+                    if (sepCounts[sep] > 0) {
+                        const average = (sepSums[sep] / sepCounts[sep]).toFixed(2);
+                        avgCell.textContent = average;
+                        avgCell.dataset.average = average;
+                    } else {
+                        avgCell.textContent = 'N/A';
+                        avgCell.dataset.average = '';
+                    }
+                });
+            });
+        }
+
+        // Function to calculate letter grades
+        function calculateLetterGrades() {
+            const studentRows = tableBody.querySelectorAll('tr');
+            studentRows.forEach(row => {
+                let totalAverage = 0;
+                let sepCount = 0;
+                const avgCells = [row.children[2], row.children[3], row.children[4]];
+                avgCells.forEach(cell => {
+                    const avg = cell.dataset.average;
+                    if (avg) {
+                        totalAverage += parseFloat(avg);
+                        sepCount++;
+                    }
+                });
+
+                const letterGradeCell = row.children[1];
+                if (sepCount > 0) {
+                    const overallAverage = totalAverage / sepCount;
+                    let letterGrade = '';
+                    if (overallAverage >= 3.5) {
+                        letterGrade = 'A';
+                    } else if (overallAverage >= 2.5) {
+                        letterGrade = 'B';
+                    } else if (overallAverage >= 1.5) {
+                        letterGrade = 'C';
+                    } else {
+                        letterGrade = 'F';
+                    }
+                    letterGradeCell.textContent = letterGrade;
+                } else {
+                    letterGradeCell.textContent = 'N/A';
+                }
+            });
+        }
+
+        // Adjust chart positions when window is resized
+        window.addEventListener('resize', adjustChartPositions);
+
+        // Initialize table with 10 skills and 10 students
+        initializeSkills();
+        initializeStudents();
+
+        // PDF Download functionality
+        document.getElementById('downloadBtn').addEventListener('click', function() {
+            // Disable the download button to prevent multiple clicks
+            this.disabled = true;
+            this.textContent = 'Generating PDF...';
+
+            // Wait for charts to render
+            setTimeout(() => {
+                // Capture the entire body
+                html2canvas(document.body, {scale: 2}).then(canvas => {
+                    const imgData = canvas.toDataURL('image/png');
+                    const pdf = new jsPDF('l', 'mm', 'a4'); // Landscape orientation
+
+                    // Calculate the number of pages needed
+                    const imgWidth = 297; // A4 width in mm
+                    const imgHeight = (canvas.height * imgWidth) / canvas.width;
+
+                    let position = 0;
+                    let heightLeft = imgHeight;
+
+                    pdf.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
+                    heightLeft -= 210;
+
+                    while (heightLeft > 0) {
+                        position = heightLeft - imgHeight;
+                        pdf.addPage();
+                        pdf.addImage(imgData, 'PNG', 0, position, imgWidth, imgHeight);
+                        heightLeft -= 210;
+                    }
+
+                    pdf.save('AssignmentSpreadsheet.pdf');
+
+                    // Re-enable the download button
+                    document.getElementById('downloadBtn').disabled = false;
+                    document.getElementById('downloadBtn').textContent = 'Download PDF';
+                });
+            }, 1000); // Adjust the timeout as needed
+        });
+
     </script>
 </body>
 </html>
